--- a/app/src/main/res/layout/activity_exaberations.xml
+++ b/app/src/main/res/layout/activity_exaberations.xml
@@ -49,6 +49,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="15sp"
+                    android:layout_gravity="center"
                     android:gravity="center"
                     android:text="Total Exaberations\nThis Week"/>
             </LinearLayout>
