--- a/app/src/main/res/layout/row3.xml
+++ b/app/src/main/res/layout/row3.xml
@@ -25,14 +25,28 @@
         android:layout_weight="1"
         android:layout_height="60sp"/>
 
-    <TextView
+    <LinearLayout
         android:layout_width="0dp"
-        android:text="Sample Text"
+        android:layout_height="wrap_content"
+        android:layout_weight="2"
+        android:orientation="vertical"
+        >
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textViewMinutesAgo"
+            android:text="5 minutes ago"
+            android:textSize="10sp" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:text="This is a long sample text "
         android:id="@+id/textViewNews"
         android:layout_gravity="center"
-        android:textSize="20sp"
+        android:textSize="18sp"
         android:layout_weight="2"
         android:layout_height="wrap_content"/>
+    </LinearLayout>
 </LinearLayout>
     </androidx.cardview.widget.CardView>
 
