--- a/app/src/main/res/layout/activity_inhaler.xml
+++ b/app/src/main/res/layout/activity_inhaler.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     android:orientation="vertical"
-    tools:context=".InhalerActivity">
+    tools:context="com.envy.asthmatracker.InhalerActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
