--- a/app/src/main/res/layout/activity_add_inhaler.xml
+++ b/app/src/main/res/layout/activity_add_inhaler.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="20dp"
+    android:layout_margin="10dp"
     android:fitsSystemWindows="true"
     android:orientation="vertical">
 
@@ -14,14 +14,15 @@
         android:weightSum="2">
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:textSize="20sp"
             android:text="Exaberation Date"/>
 
         <EditText
             android:id="@+id/dateInhaler"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_weight="1"
             android:focusable="false"
@@ -38,14 +39,15 @@
         android:weightSum="2">
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Inhaler Name"></TextView>
+            android:textSize="20sp"
+            android:text="Inhaler Name"/>
 
         <EditText
             android:id="@+id/nameInhaler"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:maxLength="10"
             android:layout_weight="1"
@@ -61,14 +63,15 @@
         android:weightSum="2">
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:textSize="20sp"
             android:layout_weight="1"
             android:text="Number of Puffs" />
 
         <Spinner
             android:id="@+id/spinnerInhaler"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1" />
 
@@ -78,9 +81,9 @@
         android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10sp"
+        android:layout_margin="20dp"
         android:text="Comments"
-        android:textSize="20dp" />
+        android:textSize="20sp" />
 
     <EditText
         android:id="@+id/notesInhaler"
