--- a/app/src/main/res/layout/activity_exaberations.xml
+++ b/app/src/main/res/layout/activity_exaberations.xml
@@ -19,7 +19,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="No Data Here Yet"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:textAlignment="center"/>
 
         <LinearLayout
@@ -112,7 +112,7 @@
             android:id="@+id/floatingActionButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
             android:clickable="true"
             android:padding="200dp"
