--- a/app/src/main/res/layout/activity_inhaler.xml
+++ b/app/src/main/res/layout/activity_inhaler.xml
@@ -19,7 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="No Data Here Yet"
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:textAlignment="center"
             android:gravity="center_horizontal"/>
 
@@ -39,7 +39,7 @@
             android:id="@+id/llInhalerStats"
             android:weightSum="3"
             android:visibility="gone"
-            android:layout_margin="20sp"
+            android:layout_margin="20dp"
             android:layout_height="wrap_content"
             android:baselineAligned="false">
 
@@ -115,17 +115,19 @@
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
             android:id="@+id/recyclerViewInhaler"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            />
 
     </LinearLayout>
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/floatingActionButton2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:clickable="true"
         android:padding="200dp"
         android:layout_margin="50dp"
-        app:srcCompat="@drawable/baseline_add_24" />
+        app:srcCompat="@drawable/baseline_add_24"
+        android:contentDescription="Add Inhaler Use" />
 </RelativeLayout>
