--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -20,15 +20,16 @@
 
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_margin="10sp"
-        android:paddingLeft="20sp"
+        android:layout_margin="10dp"
+        android:paddingLeft="20dp"
         android:layout_height="wrap_content"
         android:orientation="vertical">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAllCaps="false"
-        android:text="12th May 1998"
+        android:text="12 MAY 1998"
+        android:fontFamily="sans-serif-medium"
         android:textColor="@color/white"
         android:textSize="25sp"
         android:id="@+id/dateExaber"/>
@@ -36,6 +37,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/notes"
+        android:fontFamily="sans-serif-light"
         android:text="This is a long note"
         android:textColor="@color/white"
         android:textSize="20sp" />
@@ -46,8 +48,9 @@
         android:text="High Intensity"
         android:layout_margin="10sp"
         android:textSize="16sp"
+        android:fontFamily="sans-serif-smallcaps"
         android:id="@+id/intensity"
-        android:layout_marginRight="5sp"
+        android:layout_marginEnd="5sp"
         android:shadowColor="@color/white"
         android:textColor="@color/highIntensity"
         android:layout_alignParentRight="true"/>
