--- a/app/src/main/res/layout/activity_add_exaber.xml
+++ b/app/src/main/res/layout/activity_add_exaber.xml
@@ -45,7 +45,7 @@
         </TextView>
 
         <RadioGroup
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:gravity="center"
             android:layout_height="match_parent"
             android:orientation="horizontal"
