--- a/app/src/main/res/layout/row3_land.xml
+++ b/app/src/main/res/layout/row3_land.xml
@@ -1,24 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="400dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_margin="5dp"
         app:cardCornerRadius="10dp"
         app:cardElevation="10dp"
         app:cardUseCompatPadding="false">
+        <ScrollView
+            android:layout_width="match_parent"
 
+            android:layout_height="match_parent">
         <LinearLayout
             android:layout_width="match_parent"
             android:orientation="vertical"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent">
 <LinearLayout
     android:layout_width="match_parent"
     android:weightSum="3"
+    android:orientation="horizontal"
     android:layout_margin="10dp"
     android:layout_height="wrap_content">
 
@@ -59,11 +63,14 @@
     <ImageView
         android:layout_width="wrap_content"
         android:id="@+id/arrowHolder"
+        android:visibility="gone"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:src="@drawable/baseline_arrow_downward_24"
         />
 </LinearLayout>
+
+
             <TextView
                 android:layout_width="match_parent"
                 android:id="@+id/tvDescription"
@@ -84,7 +91,9 @@
                 android:drawableStart="@drawable/baseline_arrow_outward_24"
                 />
 
-</LinearLayout>
+        </LinearLayout>
+        </ScrollView>
+
     </androidx.cardview.widget.CardView>
 
 </RelativeLayout>
