--- a/app/src/main/res/layout/activity_latest_research.xml
+++ b/app/src/main/res/layout/activity_latest_research.xml
@@ -34,10 +34,48 @@
     <LinearLayout
         android:id="@+id/layout1"
         android:layout_width="match_parent"
+        android:orientation="vertical"
+        android:visibility="gone"
         android:layout_height="match_parent"
         android:layout_marginTop="10dp"
         >
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            >
+
+            <ToggleButton
+                android:id="@+id/toggleOne"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:checked="true"
+                android:textOff="Asthma"
+                android:textOn="Asthma"
+
+                />
+
+            <ToggleButton
+            android:layout_width="0dp"
+            android:id="@+id/toggleTwo"
+            android:layout_height="wrap_content"
+            android:textOn="Allergies"
+                android:textOff="Allergies"
+                android:layout_weight="1"
+
+            />
+        <ToggleButton
+            android:layout_width="0dp"
+            android:id="@+id/toggleThree"
+            android:layout_height="wrap_content"
+            android:textOn="English Only"
+            android:checked="true"
+            android:textOff="English Only"
+            android:layout_weight="1"
+            />
+        </LinearLayout>
         <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
             android:id="@+id/swipeRefresh1"
             android:layout_width="match_parent"
